--- a/SarifWeb/Views/Home/Index.cshtml
+++ b/SarifWeb/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     <p class="lead">The Static Analysis Results Interchange Format (SARIF) defines a standard format
     for the output of static analysis tools.</p>
     <p><a class="btn btn-primary btn-lg" target="_blank" href="https://github.com/oasis-tcs/sarif-spec/tree/master/Documents/CommitteeSpecificationDrafts/CSD.1">Read the specification &raquo;</a></p>
+    <p>The SARIF specification is currently being standardized by OASIS. This information and tools on this web site track the standard as it evolves to its final form.</p>
 </div>
 
 <div class="row">
