--- a/SarifWeb/Views/Shared/_Layout.cshtml
+++ b/SarifWeb/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <!--<li>@Html.ActionLink("About", "About", "Home")</li>-->
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Validator", "Index", "Validation")</li>
                 </ul>
             </div>
         </div>
