Add disclaimer text to validator page.

--- a/SarifWeb/Views/Validation/Index.cshtml
+++ b/SarifWeb/Views/Validation/Index.cshtml
@@ -3,6 +3,8 @@
 }
 <h2>@ViewBag.Title</h2>
 
+<p>This page is under construction. When it is working, you'll be able to upload a SARIF log file, and the page will validate it and inform you of any issues it finds in your file.</p>
+
 <div id="dropArea">
     Drag the SARIF log file you want to validate and drop it here.
 </div>
