Get file upload working
It wasn't working in the previous PR because I hadn't worked through to the end of the [tutorial](https://www.youtube.com/watch?v=TYmR59zwwe0).

--- a/SarifWeb/Views/Home/Index.cshtml
+++ b/SarifWeb/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <p class="lead">The Static Analysis Results Interchange Format (SARIF) defines a standard format
     for the output of static analysis tools.</p>
     <p><a class="btn btn-primary btn-lg" target="_blank" href="https://github.com/oasis-tcs/sarif-spec/tree/master/Documents/CommitteeSpecificationDrafts/CSD.1">Read the specification &raquo;</a></p>
-    <p>The SARIF specification is currently being standardized by OASIS. This information and tools on this web site track the standard as it evolves to its final form.</p>
+    <p>The SARIF specification is currently being standardized by <a href="https://www.oasis-open.org/">OASIS</a> in the <a href="https://www.oasis-open.org/committees/tc_home.php?wg_abbrev=sarif">OASIS SARIF Technical Committee</a>. This information and tools on this web site track the standard as it evolves to its final form.</p>
 </div>
 
 <div class="row">
