--- a/src/SarifWeb/Views/Home.html
+++ b/src/SarifWeb/Views/Home.html
@@ -10,13 +10,17 @@
         }
 
         a:link, a:visited {
-            color: inherit;
+            color: #004D8E;
             text-decoration: none;
         }
 
-        a:hover, a:active, button:hover, button:active {
+        a:hover, a:active {
             color: #008AFF;
             text-decoration: underline;
+        }
+
+        button:hover, button:active {
+            color: #008AFF;
         }
 
         button {
@@ -25,7 +29,7 @@
         }
 
         button:hover, button:active {
-            background-color: #D9E7F3;
+            background-color: #E6EDF3;
         }
 
         #page_container {
@@ -36,6 +40,8 @@
         header {
             align-items: center;
             background-color: #FFFFFF;
+            border-top-left-radius: 7px;
+            border-top-right-radius: 7px;
             display: flex;
             height: 50px;
         }
@@ -116,14 +122,20 @@
             text-align: right;
         }
 
-        #hero_title {
-            font-family: 'Roboto', sans-serif;
-            font-size: 50px;
-            grid-column: 2;
-            grid-row: 1;
-            line-height: 59px;
-            text-align: left;
-        }
+            #hero_logo img {
+                border-radius: 5px;
+                height: 100px;
+                width: 100px;
+            }
+
+            #hero_title {
+                font-family: 'Roboto', sans-serif;
+                font-size: 50px;
+                grid-column: 2;
+                grid-row: 1;
+                line-height: 59px;
+                text-align: left;
+            }
 
         #hero_tagline {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -168,17 +180,30 @@
 
         .content-button {
             border-radius: 5px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Segoe UI Semibold', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 14px;
         }
 
         #spec_section_buttons {
             display: flex;
+            flex-wrap: wrap;
+            font-weight: bold;
+            justify-content: flex-start;
+            margin-bottom: 29px;
         }
 
-        #spec_section_buttons {
+        #spec_section_buttons1 {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            margin-right: 28px;
+        }
+
+        #spec_section_buttons2 {
+            display: flex;
             flex: 1;
-            font-weight: bold;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         #spec_section_button_read {
@@ -196,9 +221,16 @@
             width: 400px;
         }
 
+        .button-subtitle {
+            font-family: Roboto;
+            font-size: 10px;
+        }
+
         footer {
             align-items: center;
             background-color: #4D4D4D;
+            border-bottom-left-radius: 7px;
+            border-bottom-right-radius: 7px;
             color: #FFFFFF;
             display: flex;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -212,6 +244,18 @@
             text-align: center;
         }
     </style>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $("button").on("click", function () {
+                var sender = $(this);
+                var url = sender.attr("href");
+                var target = sender.attr("target");
+
+                window.open(url, target);
+            });
+        });
+    </script>
 </head>
 <body>
     <div id="page_container">
@@ -238,7 +282,7 @@
 
         <section id="hero">
             <div id="hero_content_grid">
-                <div id="hero_logo"><img src="../Images/triskelion.png" width="100" height="100" /></div>
+                <div id="hero_logo"><img src="../Images/triskelion.png" /></div>
                 <div id="hero_title">SARIF</div>
                 <div id="hero_tagline">
                     The Static Analysis Results Interchange Format (SARIF)
@@ -257,11 +301,22 @@
                 on this web site track the standard as it evolves to its final form.
             </div>
             <div id="spec_section_buttons">
-                <button id="spec_section_button_read" href="https://github.com/oasis-tcs/sarif-spec/tree/master/Documents/CommitteeSpec" target="_blank" class="content-button gray-section">Read the specification</button>
-                <button id="spec_section_button_ask" href="https://github.com/oasis-tcs/sarif-spec/issues/new" target="_blank" class="content-button gray-section">Ask a question</button>
-                <button id="spec_section_button_view" href="#Viewers" target="_blank" class="content-button gray-section">View and validate your SARIF files</button>
+                <div id="spec_section_buttons1">
+                    <button id="spec_section_button_read" href="https://github.com/oasis-tcs/sarif-spec/tree/master/Documents/CommitteeSpecificationDrafts/CSD.1" target="_blank" class="content-button gray-section">Read the specification</button>
+                    <button id="spec_section_button_ask" href="https://github.com/oasis-tcs/sarif-spec/issues/new" target="_blank" class="content-button gray-section">Ask a question</button>
+                </div>
+                <div id="spec_section_buttons2">
+                    <button id="spec_section_button_view" href="#Viewers" target="_blank" class="content-button gray-section">
+                        View and validate your SARIF files
+                        <p class="button-subtitle">
+                            Upload and explore your SARIF file or
+                            <br />
+                            browse one of the samples.
+                            </p>
+                    </button>
+                </div>
             </div>
-            <div class="content-section-text">This site is for SARIF version 2. For version, 1 see the <a href="http://sarif.azurewebsites.net">legacy site</a>.</div>
+            <div class="content-section-text">This site is for SARIF version 2. For version 1, see the <a href="http://sarif.azurewebsites.net">legacy site</a>.</div>
         </section>
         
         <footer>
